--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <section id="welcome-section" class="Welcome">
         <h1 id="welc-about1">Hey, I'm Connor Hill</h1>
-        <h2 id="welc-about">An iOS and front end focused software developer building the front end of websites and iOS apps that lead to the success of the overall product</h2>   
+        <h2 id="welc-about">An iOS and front end focused software developer building iOS apps and the front end of websites that lead to the success of the overall product.</h2>   
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about" class="About-mee">
@@ -40,8 +40,8 @@
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3">Here I am!</h2>
-            <h2 id="about4">I'm a <strong>front end web and iOS software developer</strong> building the front end of websites and iOS apps that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
-            <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to web development and programming.</h2>
+            <h2 id="about4">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
+            <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
             <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
           </div>
@@ -49,15 +49,15 @@
             <h2 id="about3">My skills</h2>
             <div class="skills-container">
             <div class="skills">
+              <div class="skills_skill">SwiftUI</div>
+              <div class="skills_skill">UIKit</div>
+              <div class="skills_skill">SwiftData</div>
               <div class="skills_skill">HTML</div>
               <div class="skills_skill">CSS</div>
               <div class="skills_skill">JavaScript</div>
-              <div class="skills_skill">React</div>
-              <div class="skills_skill">Python</div>
-              <div class="skills_skill">C#</div>
               <div class="skills_skill">Github</div>
               <div class="skills_skill">Responsive Design</div>
-              <div class="skills_skill">Terminal</div>
+              <div class="skills_skill">API's</div>
               <div class="skills_skill">SQL basics</div>
               <div class="skills_skill">Problem Solving</div>
               <div class="skills_skill">Java</div>
@@ -127,8 +127,8 @@
       <section id="contact" class="contact">
         <h2 id="about1">CONTACT ME</h2>
         <div class="barz"></div>
-        <h2 id="about2" class="contact-paragraph">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
-        <form class="form" method="post" action="#">
+        <h2 id="about2" class="contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
+        <!-- <form class="form" method="post" action="#">
           <div class="name-entry">
             <label class="name-label" for="name">Name</label>
             <input required placeholder="Enter Your Name" type="text"  class="name-input" name="name" id="name"/>
@@ -142,13 +142,13 @@
             <input required cols="30" rows="10" placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
           </div>
           <button type="submit" class="submit-button">SUBMIT</button>
-        </form>
+        </form> -->
       </section>
       <div class="footer">
         <div class="above-bar-footer">
           <div class="footdiv-left">
             <h2 class="footer-name" id="about10">Connor Hill</h2>
-            <h3 class="footer-description" id="about11">A front end focused web developer building the front end of websites and web applications that lead to the success of the overall product</h3>
+            <h3 class="footer-description" id="about11">An iOS and front end focused software developer building iOS apps and the front end of websites that lead to the success of the overall product.</h3>
           </div>
           <div class="footdiv-right">
             <h2 class="socials">Socials</h2>
