--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <i class="ss fab fa-instagram"></i>
               </a>
               <a id="profile-link" href="https://www.linkedin.com/in/connor-j-hill/">
-                <i class="ss fab fa-linkedin-in"></i>
+                <i class="ss fab fa-linkedin-in fa-9x"></i>
               </a>
               <a id="profile-link" href="https://www.youtube.com/freecodecamp">
                 <i class="ss fab fa-youtube"></i>
