--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2 id="about1">CONTACT ME</h2>
         <div class="barz"></div>
         <h2 id="about2" class="contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
-        <!-- <form class="form" method="post" action="#">
+        <!-- <form class="form" method="post" action="#"> -->
           <div class="name-entry">
             <label class="name-label" for="name">Name</label>
             <input required placeholder="Enter Your Name" type="text"  class="name-input" name="name" id="name"/>
@@ -141,8 +141,8 @@
             <label class="message-label" for="message">Message</label>
             <input required cols="30" rows="10" placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
           </div>
-          <button type="submit" class="submit-button">SUBMIT</button>
-        </form> -->
+          <!-- <button type="submit" class="submit-button">SUBMIT</button>
+        </form>  -->
       </section>
       <div class="footer">
         <div class="above-bar-footer">
@@ -154,7 +154,7 @@
             <h2 class="socials">Socials</h2>
             <div class="social-icons">
               <a id="profile-link" target="_blank" href="https://www.facebook.com/connor.hill.96155/">
-                <i class="ss fab fa-facebook-f fa-2x"></i>
+                <i class="ss fab fa-facebook-f fa-21x"></i>
               </a>
               <a id="profile-link" href="https://github.com/MeruemMoniker">
                 <i class="ss fab fa-github fa-2x"></i>
