--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
         <h2 id="about2" class="contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
         <!-- <form class="form" method="post" action="#"> -->
           <div class="name-entry">
-            <label class="name-label" for="name">Name</label>
-            <input required placeholder="Enter Your Name" type="text"  class="name-input" name="name" id="name"/>
+            <label class="name-label" for="name">Email:</label>
+            <h2 id="about2" class="contact-paragraph"><strong>Jamesconnorhill@gmail.com</strong></h2>
           </div>
           <div class="email-entry">
-            <label class="email-label" for="email">Email</label>
-            <input required placeholder="Enter Your Email" type="text"  class="email-input" name="email" id="email"/>
+            <label class="email-label" for="email">Phone Number:</label>
+            <h2 id="about2" class="contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
           <div class="message-entry">
-            <label class="message-label" for="message">Message</label>
-            <input required cols="30" rows="10" placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
+            <label class="message-label" for="message">LinkedIn</label>
+            <h2 href="https://www.linkedin.com/in/connor-j-hill/" id="about2" class="contact-paragraph"><strong>Message Me!</strong></h2>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
         </form>  -->
