--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             </div>
             <div class="project1-right">
               <h2 id="about3">Project 1</h2>
-              <h2 id="about2">A simple, classic game</h2>
-              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
+              <h2 id="about2">Project description</h2>
+              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Live Link</a>
             </div>
           </div>
           <div class="project-2-container">
@@ -89,17 +89,17 @@
             <div class="project2-right">
               <h2 id="about3">Project 2</h2>
               <h2 id="about2"></h2>
-              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Live Link</a>
+              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
             </div>
           </div>
           <div class="project-3-container">
             <div class="project3-left">
-              <p class="p3p">project 3 pic</p>
+              <p class="p3p"></p>
             </div>
             <div class="project3-right">
               <h2 id="about3">Project 3</h2>
               <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Learn More</a>
             </div>
           </div>
           <div class="project-4-container">
@@ -107,9 +107,9 @@
               <p class="p4p">project 4 pic</p>
             </div>
             <div class="project4-right">
-              <h2 id="about3">Project 4</h2>
-              <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
+              <h2 id="about3">RPS</h2>
+              <h2 id="about2">A simple, classic gamen</h2>
+              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Learn More</a>
             </div>
           </div>
           <div class="project-5-container">
@@ -119,7 +119,7 @@
             <div class="project5-right">
               <h2 id="about3">Project 5</h2>
               <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Learn More</a>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
             <h2 id="about2" class="contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
           <div class="message-entry">
-            <label class="message-label" for="message">LinkedIn:</label>
+            <label class="message-label center" for="message">LinkedIn:</label>
             <a id="about2" class="contact-paragraph center" href="https://www.linkedin.com/in/connor-j-hill/" id="about2" class="contact-paragraph"><strong>Message Me!</strong></a>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
