--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="barz"></div>
         <h2 id="about2">These are some of my projects</h2>
         <div class="project-section">
-          <div class="project-1-container">
+          <!-- <div class="project-1-container">
             <div class="project1-left">
               <p class="p1p">project 1 pic</p>
             </div>
@@ -81,7 +81,7 @@
               <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
             </div>
-          </div>
+          </div> -->
           <div class="project-2-container">
             <div class="project2-left">
               <p class="p2p">project 2 pic</p>
